= Version History =

x.x:

- fixed: wrong default message body
- fixed: limit issues with the new activity tabs

1.1 (2012-12-20):

- added: optional replace site notifications with a personalized river view

1.0 (2012-12-11):

- first release